seperate gameBoard logic and create two other component to be clean and more clear the code and do not have in one component many code and also add function handleCellClick inside the tictactoeLogic file to import it then inside the GameBoard component and use there, also create form for user to fill it and share his information with us and for that i use external validation library yup

--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "postcss:watch": "postcss styles.css -o output.css --watch"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "@reduxjs/toolkit": "^2.5.0",
     "autoprefixer": "^10.4.20",
     "next": "15.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-redux": "^9.2.0"
+    "react-hook-form": "^7.54.2",
+    "react-redux": "^9.2.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
