--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "postbuild": "next-sitemap",
     "postcss:watch": "postcss styles.css -o output.css --watch"
   },
   "dependencies": {
@@ -15,6 +16,7 @@
     "autoprefixer": "^10.4.20",
     "howler": "^2.2.4",
     "next": "15.1.5",
+    "next-sitemap": "^4.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
