--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@reduxjs/toolkit": "^2.5.0",
+    "@vercel/analytics": "^1.5.0",
     "autoprefixer": "^10.4.20",
     "howler": "^2.2.4",
     "next": "15.1.5",
